# TheCurator

./: .gitignore  LICENSE  defaults.toml  environment.yml  pyproject.toml  settings.toml
documentation/: codespace.md  data.md  env.md  hashing.md  params.md
inspiration/: aggregate_view.py  normalize_config.py
inspiration/repro_skeleton/: README.md
inspiration/repro_skeleton/.repro_store/aliases/data/: mytmp
inspiration/repro_skeleton/.repro_store/aliases/runs/: demo  mytest
inspiration/repro_skeleton/examples/: step_example.py  test.py
inspiration/repro_skeleton/repro/: __init__.py  cli.py  config.py  context.py  decorators.py  hashing.py  manifest.py  runner.py  store.py  util.py
src/curator/: settings.toml
src/curator/namespaces/: paths.py
src/curator/reproducibility/: codespace.py  data.py  environment.py
test/: constants.py  test.ipynb
